# ghost_unwind

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  reorg.sh  shadow_stack.cpp  shadow_stack.hpp  shadow_stack_test  trampoline.S  trampoline_template.c  trampoline_tmp.S
include/: ghost_stack.hpp  shadow_stack.hpp
scripts/: build.sh  trace_program.sh
src/: aarch64_linux_trampoline.s  aarch64_trampoline.s  check.cpp  ghost_stack.cpp  preload.cpp  shadow_stack.cpp  trampoline_template.cpp
test/: bench.cpp  main.cpp  test_read.cpp
